// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBreadcrumbs.js should have breadcrumbs classes 1`] = `

<ul class="breadcrumbs">
</ul>

`;

exports[`VBreadcrumbs.js should inject slot to children 1`] = `

<ul class="breadcrumbs">
  <li>
    <a class="breadcrumbs__item"
       data-ripple="false"
    >
    </a>
  </li>
  <li class="breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="breadcrumbs__item"
       data-ripple="false"
    >
    </a>
  </li>
  <li class="breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="breadcrumbs__item"
       data-ripple="false"
    >
    </a>
  </li>
  <li class="breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="breadcrumbs__item"
       data-ripple="false"
    >
    </a>
  </li>
</ul>

`;

exports[`VBreadcrumbs.js should use a custom divider slot 1`] = `

<ul class="breadcrumbs">
  <li>
    <a class="breadcrumbs__item"
       data-ripple="false"
    >
    </a>
  </li>
  <li class="breadcrumbs__divider">
    /divider/
  </li>
  <li>
    <a class="breadcrumbs__item"
       data-ripple="false"
    >
    </a>
  </li>
</ul>

`;

exports[`VBreadcrumbs.js should use custom justify props 1`] = `

<ul class="breadcrumbs">
</ul>

`;

exports[`VBreadcrumbs.js should use custom justify props 2`] = `

<ul class="breadcrumbs">
</ul>

`;
